Products page finish

--- a/dostavka.html
+++ b/dostavka.html
@@ -22,6 +22,13 @@
                 </form>
             </div>
             <div class="header_right">
+                <div class="div_phone_ad">
+                    <div class="div_telephone">
+                        <img src="img/phone-ico.svg" alt="" class="img_phone_ad">
+                        <p>8 - 999 - 999 - 00 - 00</p>
+                    </div>
+                    <p class="p-adress_ad">Брянск, ул. 50 Армии, 1</p>
+                </div>
                 <div class="div_phone">
                     <img src="img/phone-ico.svg" alt="" class="img_phone">
                     <p>8 - 999 - 999 - 00 - 00</p>
@@ -48,9 +55,9 @@
         <div class="sidebar_wrap">
             <ul class="sidebar_list">
                 <li class="sidebar_li"><a href="/">ГЛАВНАЯ</a></li>
-                <li class="sidebar_li"><a href="">ПРОДУКЦИЯ</a></li>
+                <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
                 <li class="sidebar_li"><a href="">УСЛУГИ</a></li>
-                <li class="sidebar_li"><a href="">ДОСТАВКА</a></li>
+                <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
                 <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="">ИНФОРМАЦИЯ</a></li>
                 <li class="sidebar_li"><a href="">КОНТАКТЫ</a></li>
@@ -71,6 +78,17 @@
                 <p class="bask-p">1</p>
             </a>
         </div>
+    </section>
+    <section class="menu_adaptive">
+        <ul class="menu_adaptive_list">
+            <li class="menu_adaptive_li"><a href="/">Главная</a></li>
+            <li class="menu_adaptive_li"><a href="products.html">Продукция</a></li>
+            <li class="menu_adaptive_li"><a href="">Услуги</a></li>
+            <li class="menu_adaptive_li"><a href="dostavka.html">Доставка</a></li>
+            <li class="menu_adaptive_li"><a href="">Производство</a></li>
+            <li class="menu_adaptive_li"><a href="">Информация</a></li>
+            <li class="menu_adaptive_li"><a href="">Контакты</a></li>
+        </ul>
     </section>
     <nav class="menu_nav">
             <div class="menu_name">
@@ -103,51 +121,51 @@
                 </li>
             </ul>
     </nav>
-    <main class="main">
-        <section class="intro">
-            <div class="intro_wrap">
-                <div class="intro_desc">
-                    <div class="intro_nav">
-                        <a href=""><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
-                        <p>|</p>
-                        <a href="">Доставка</a>
+        <main class="main">
+            <section class="intro">
+                <div class="intro_wrap">
+                    <div class="intro_desc">
+                        <div class="intro_nav">
+                            <a href=""><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
+                            <p>|</p>
+                            <a href="">Доставка</a>
+                        </div>
+                        <div class="intro_nav_mob">
+                            <a href=""><img src="./img/dostavka/arrow-left-black.svg" alt=""></a>
+                            <a href="">Доставка</a>
+                        </div>
+                        <div class="intro_img_mob">
+                            <img src="./img/dostavka/intro-img-mob.png" alt="">
+                        </div>
+                        <h2 class="intro_h2">Доставка</h2>
+                        <p class="desc_p">Цена на доставку груза рассчитывается по тарифам выбранной вами
+                            транспортной компании исходя из веса, объёма груза, а также расстояния доставки.
+                            Для некоторых объёмных и тяжёлых грузов более выгодна доставка отдельным транспортом.
+                            Наш логист всегда будет рад вам помочь.</p>
+                        <div class="intro-links">
+                            <div class="intro-links-cards">
+                                <img src="./img/dostavka/intro-links-1-svg.svg" alt="">
+                            </div>
+                            <div class="intro-links-cards">
+                                <img src="./img/dostavka/intro-links-2-svg.svg" alt="">
+                            </div>
+                            <div class="intro-links-cards">
+                                <img src="./img/dostavka/intro-links-3-svg.svg" alt="">
+                            </div>
+                            <div class="intro-links-cards">
+                                <img src="./img/dostavka/intro-links-4-svg.svg" alt="">
+                            </div>
+                            <div class="intro-links-cards">
+                                <img src="./img/dostavka/intro-links-5-svg.svg" alt="">
+                            </div>
+                        </div>
                     </div>
-                    <div class="intro_nav_mob">
-                        <a href=""><img src="./img/dostavka/arrow-left-black.svg" alt=""></a>
-                        <a href="">Доставка</a>
-                    </div>
-                    <div class="intro_img_mob">
-                        <img src="./img/dostavka/intro-img-mob.png" alt="">
-                    </div>
-                    <h2 class="intro_h2">Доставка</h2>
-                    <p class="desc_p">Цена на доставку груза рассчитывается по тарифам выбранной вами
-                         транспортной компании исходя из веса, объёма груза, а также расстояния доставки.
-                          Для некоторых объёмных и тяжёлых грузов более выгодна доставка отдельным транспортом.
-                           Наш логист всегда будет рад вам помочь.</p>
-                    <div class="intro-links">
-                        <div class="intro-links-cards">
-                            <img src="./img/dostavka/intro-links-1-svg.svg" alt="">
-                        </div>
-                        <div class="intro-links-cards">
-                            <img src="./img/dostavka/intro-links-2-svg.svg" alt="">
-                        </div>
-                        <div class="intro-links-cards">
-                            <img src="./img/dostavka/intro-links-3-svg.svg" alt="">
-                        </div>
-                        <div class="intro-links-cards">
-                            <img src="./img/dostavka/intro-links-4-svg.svg" alt="">
-                        </div>
-                        <div class="intro-links-cards">
-                            <img src="./img/dostavka/intro-links-5-svg.svg" alt="">
-                        </div>
+                    <div class="intro_img">
+                        <img src="./img/dostavka/intro-img.png" alt="">
                     </div>
                 </div>
-                <div class="intro_img">
-                    <img src="./img/dostavka/intro-img.png" alt="">
-                </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
     <footer class="footer">
         <div class="footer_wrap">
             <div class="footer_left">
