--- a/products.html
+++ b/products.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style-products.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/style-products.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -119,7 +119,7 @@
                         <h1>Продукция</h1>
                         <p>1.246 товаров</p>
                         <ul class="ul_main">
-                            <li class="li_main"><a href="" class="a_main">Основная продукция</a>
+                            <li class="li_main"><a href="#!" class="a_main a_main_first a_main_but">Основная продукция</a>
                                 <div class="li_main_list">
                                     <a href="" class="a_list"><p>Все</p><span>150</span></a> 
                                     <a href="" class="a_list"><p>Для тепловозов </p><span>25</span></a> 
@@ -313,6 +313,144 @@
                                 <a href=""><p>Дальше</p><img src="./img/products/prod-arrow-right.svg" alt=""></a>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="intro_mobile">
+                <div class="intro_mobile_wrap">
+                    <div class="nav_wrap">
+                        <a href="/"><img src="./img/products/prod-arrow-left.svg" alt="" class="info_img"></a>
+                        <div class="info_nav">
+                            <h1>Продукция</h1>
+                            <p>1.246 товаров</p>
+                        </div>
+                        <a href="#!" class="prod_nav"></a>
+                        <a href="#!" class="prod_list"></a>
+                    </div>
+                    <div class="prod_nav_hide">
+                        <div class="prod_nav_hide_wrap">
+                            <a href="">По популярности</a>
+                            <a href="">Новая продукция</a>
+                            <a href="">В наличии</a>
+                            <a href="">По алфавиту А-Я</a>
+                        </div>
+                    </div>
+                    <div class="prod_list_hide">
+                        <div class="prod_list_hide_wrap">
+                            <ul class="ul_main">
+                                <li class="li_main"><a href="#!" class="a_main a_mains li_main_but">Основная продукция</a>
+                                    <div class="li_main_lists">
+                                        <a href="" class="a_list"><p>Все</p><span>150</span></a> 
+                                        <a href="" class="a_list"><p>Для тепловозов </p><span>25</span></a> 
+                                        <a href="" class="a_list"><p>Для Дизелей </p><span>25</span></a> 
+                                        <a href="" class="a_list"><p>Для Компрессоров </p><span>25</span></a> 
+                                        <a href="" class="a_list"><p>Для УГП</p><span>25</span></a> 
+                                        <a href="" class="a_list"><p>Для Вагонов</p><span>25</span></a> 
+                                        <a href="" class="a_list"><p>Другие запчасти</p><span>25</span></a> 
+                                    </div>
+                                </li>
+                                <li class="li_main"><a href="" class="a_main a_mains">Наша продукция</a></li>
+                                <li class="li_main"><a href="" class="a_main a_mains">Дилерская продукция</a></li>
+                                <li class="li_main"><a href="" class="a_main a_mains">Остальная продукция</a></li>
+                                <li class="li_main"><a href="" class="a_main a_mains">Спецпредложения</a></li>
+                                <li class="li_main"><a href="" class="a_main a_mains">На складе</a></li>
+                                <li class="li_main"><a href="" class="a_main a_mains">Неликвиды</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="products_wrap">
+                        <div class="prod_card">
+                            <div class="desc_card">
+                                <img src="./img/products/prod-1-mobile.png" alt="" class="desc_card_img">
+                                <div class="desc_card_price">
+                                    <p class="p_big">Название товара</p>
+                                    <p class="p_light">Описание товара</p>
+                                    <p class="price_old">1 900,65 ₽</p>
+                                    <p class="price_new">0 000,00 ₽</p>
+                                </div>
+                            </div>
+                            <div class="but_card">
+                                <a href="" class="buy_btn">Добавить в корзину<img src="./img/products/basket-but.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="prod_card">
+                            <div class="desc_card">
+                                <img src="./img/products/prod-2-mobile.png" alt="" class="desc_card_img">
+                                <div class="desc_card_price">
+                                    <p class="p_big">Название товара</p>
+                                    <p class="p_light">Описание товара</p>
+                                    <p class="price_old">1 900,65 ₽</p>
+                                    <p class="price_new">0 000,00 ₽</p>
+                                </div>
+                            </div>
+                            <div class="but_card">
+                                <a href="" class="buy_btn">Добавить в корзину<img src="./img/products/basket-but.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="prod_card">
+                            <div class="desc_card">
+                                <img src="./img/products/prod-3-mobile.png" alt="" class="desc_card_img">
+                                <div class="desc_card_price">
+                                    <p class="p_big">Название товара</p>
+                                    <p class="p_light">Описание товара</p>
+                                    <p class="price_old">1 900,65 ₽</p>
+                                    <p class="price_new">0 000,00 ₽</p>
+                                </div>
+                            </div>
+                            <div class="but_card">
+                                <a href="" class="buy_btn">Добавить в корзину<img src="./img/products/basket-but.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="prod_card">
+                            <div class="desc_card">
+                                <img src="./img/products/prod-4-mobile.png" alt="" class="desc_card_img">
+                                <div class="desc_card_price">
+                                    <p class="p_big">Название товара</p>
+                                    <p class="p_light">Описание товара</p>
+                                    <p class="price_old">1 900,65 ₽</p>
+                                    <p class="price_new">0 000,00 ₽</p>
+                                </div>
+                            </div>
+                            <div class="but_card">
+                                <a href="" class="buy_btn">Добавить в корзину<img src="./img/products/basket-but.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="prod_card">
+                            <div class="desc_card">
+                                <img src="./img/products/prod-1-mobile.png" alt="" class="desc_card_img">
+                                <div class="desc_card_price">
+                                    <p class="p_big">Название товара</p>
+                                    <p class="p_light">Описание товара</p>
+                                    <p class="price_old">1 900,65 ₽</p>
+                                    <p class="price_new">0 000,00 ₽</p>
+                                </div>
+                            </div>
+                            <div class="but_card">
+                                <a href="" class="buy_btn">Добавить в корзину<img src="./img/products/basket-but.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="prod_card">
+                            <div class="desc_card">
+                                <img src="./img/products/prod-2-mobile.png" alt="" class="desc_card_img">
+                                <div class="desc_card_price">
+                                    <p class="p_big">Название товара</p>
+                                    <p class="p_light">Описание товара</p>
+                                    <p class="price_old">1 900,65 ₽</p>
+                                    <p class="price_new">0 000,00 ₽</p>
+                                </div>
+                            </div>
+                            <div class="but_card">
+                                <a href="" class="buy_btn">Добавить в корзину<img src="./img/products/basket-but.svg" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pagination_wrap">
+                        <a href="">1</a>
+                        <a href="">2</a>
+                        <a href="">3</a>
+                        <a href="">4</a>
+                        <a href="">5</a>
+                        <a href=""><p>Дальше</p><img src="./img/products/prod-arrow-right.svg" alt=""></a>
                     </div>
                 </div>
             </section>
