--- a/products.html
+++ b/products.html
@@ -109,7 +109,7 @@
     </nav>
         <main class="main">
             <section class="intro_nav">
-                <a href=""><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
+                <a href="/"><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
                 <p>|</p>
                 <a href="">Доставка</a>
             </section>
@@ -524,6 +524,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./js/products.js" ></script>
         <script src="./js/main.js" ></script>
     </body>
     </html>
