--- a/uslugi.html
+++ b/uslugi.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dostavka</title>
+    <title>Uslugi</title>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style-dostavka.css">
+    <link rel="stylesheet" href="css/style-uslugi.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -56,8 +56,8 @@
             <ul class="sidebar_list">
                 <li class="sidebar_li"><a href="/">ГЛАВНАЯ</a></li>
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
-                <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
-                <li class="sidebar_li sidebar_li_act"><a href="dostavka.html">ДОСТАВКА</a></li>
+                <li class="sidebar_li sidebar_li_act"><a href="">УСЛУГИ</a></li>
+                <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
                 <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="">ИНФОРМАЦИЯ</a></li>
                 <li class="sidebar_li"><a href="">КОНТАКТЫ</a></li>
@@ -124,44 +124,81 @@
         <main class="main">
             <section class="intro">
                 <div class="intro_wrap">
-                    <div class="intro_desc">
-                        <div class="intro_nav">
-                            <a href=""><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
-                            <p>|</p>
-                            <a href="">Доставка</a>
-                        </div>
-                        <div class="intro_nav_mob">
-                            <a href=""><img src="./img/dostavka/arrow-left-black.svg" alt=""></a>
-                            <a href="">Доставка</a>
-                        </div>
-                        <div class="intro_img_mob">
-                            <img src="./img/dostavka/intro-img-mob.png" alt="">
-                        </div>
-                        <h2 class="intro_h2">Доставка</h2>
-                        <p class="desc_p">Цена на доставку груза рассчитывается по тарифам выбранной вами
-                            транспортной компании исходя из веса, объёма груза, а также расстояния доставки.
-                            Для некоторых объёмных и тяжёлых грузов более выгодна доставка отдельным транспортом.
-                            Наш логист всегда будет рад вам помочь.</p>
-                        <div class="intro-links">
-                            <div class="intro-links-cards">
-                                <img src="./img/dostavka/intro-links-1-svg.svg" alt="">
-                            </div>
-                            <div class="intro-links-cards">
-                                <img src="./img/dostavka/intro-links-2-svg.svg" alt="">
-                            </div>
-                            <div class="intro-links-cards">
-                                <img src="./img/dostavka/intro-links-3-svg.svg" alt="">
-                            </div>
-                            <div class="intro-links-cards">
-                                <img src="./img/dostavka/intro-links-4-svg.svg" alt="">
-                            </div>
-                            <div class="intro-links-cards">
-                                <img src="./img/dostavka/intro-links-5-svg.svg" alt="">
-                            </div>
-                        </div>
+                    <div class="intro_nav">
+                        <a href=""><img src="../img/dostavka/arrow-left-grey.png" alt="">Главная</a>
+                        <p>|</p>
+                        <a href="">Услуги</a>
                     </div>
-                    <div class="intro_img">
-                        <img src="./img/dostavka/intro-img.png" alt="">
+                    <div class="service_wrap">
+                        <h1 class="intro_h2">Услуги</h1>
+                        <div class="serv_card_wrap">
+                            <div class="serv_card">
+                                <div class="serv_img_mob">
+                                    <img src="../img/uslugi/uslugi-1-mob.png" alt="">
+                                </div>
+                                <div class="serv_desc">
+                                    <div class="desc_wrap">
+                                    <h2>Изготовление на заказ</h2>
+                                    <p>Наша компания изготавливает различные виды машиностроительной 
+                                        продукции, как по чертежам заказчика, так и по "образцу" с 
+                                        разработкой конструкторской документации.</p>
+                                    </div>
+                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
+                                </div>
+                                <div class="serv_img">
+                                    <img src="../img/uslugi/uslugi-1.png" alt="">
+                                </div>
+                            </div>
+                            <div class="serv_card">
+                                <div class="serv_img_mob">
+                                    <img src="../img/uslugi/uslugi-2-mob.png" alt="">
+                                </div>
+                                <div class="serv_desc">
+                                    <div class="desc_wrap">
+                                    <h2>Ремонт</h2>
+                                    <p>Наша компания выполняет, как гарантийный так и постгарантийный 
+                                        ремонт изделий. </p>
+                                    </div>
+                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
+                                </div>
+                                <div class="serv_img">
+                                    <img src="../img/uslugi/uslugi-2.png" alt="">
+                                </div>
+                            </div>
+                            <div class="serv_card">
+                                <div class="serv_img_mob">
+                                    <img src="../img/uslugi/uslugi-3-mob.png" alt="">
+                                </div>
+                                <div class="serv_desc">
+                                    <div class="desc_wrap">
+                                    <h2>Термическая обработка</h2>
+                                    <p>Наша компания предоставляет услуги по термообработке деталей. 
+                                        Имеем в своём распоряжении печь камерного типа  и установку 
+                                        ТВЧ.</p>
+                                    </div>
+                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
+                                </div>
+                                <div class="serv_img">
+                                    <img src="../img/uslugi/uslugi-3.png" alt="">
+                                </div>
+                            </div>
+                            <div class="serv_card">
+                                <div class="serv_img_mob">
+                                    <img src="../img/uslugi/uslugi-4-mob.png" alt="">
+                                </div>
+                                <div class="serv_desc">
+                                    <div class="desc_wrap">
+                                    <h2>Конструкторские услуги</h2>
+                                    <p>Наша компания имеет собственное конструкторское бюро и готова 
+                                        оказать соответствующие услуги.</p>
+                                    </div>
+                                    <a href="" class="serv_btn">Заказать <img src="./img/arrow-right-intro.png" alt=""></a>
+                                </div>
+                                <div class="serv_img">
+                                    <img src="../img/uslugi/uslugi-4.png" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
