--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tippy.css">
 </head>
 <body>
@@ -56,9 +56,9 @@
     <section class="sidebar">
         <div class="sidebar_wrap">
             <ul class="sidebar_list">
-                <li class="sidebar_li"><a href="/">ГЛАВНАЯ</a></li>
+                <li class="sidebar_li sidebar_li_act"><a href="/">ГЛАВНАЯ</a></li>
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
-                <li class="sidebar_li"><a href="">УСЛУГИ</a></li>
+                <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
                 <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="">ИНФОРМАЦИЯ</a></li>
@@ -712,5 +712,6 @@
     <script src="./js/popper.js" ></script>
     <script src="./js/tippy.js" ></script>
     <script src="./js/main.js" ></script>
+    <script src="./js/index.js" ></script>
 </body>
 </html>
